2007-06-10  Andreas Kirschbaum

	* Reduce CPU load.

2007-06-09  Andreas Kirschbaum

	* Accelerate map drawing; remove dependency to sixlegs png
	library.