@@ -1,3 +1,7 @@
+2007-06-12  Andreas Kirschbaum
+
+	* Disable start screen since only one option is implemented.
+
 2007-06-10  Andreas Kirschbaum
 
 	* Reduce CPU load.
